--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,68 +6,24 @@
     android:layout_height="match_parent"
     tools:context="com.example.book.test.MainActivity">
 
-    <EditText
-        android:id="@+id/ipInput"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="64dp"
-        android:layout_marginEnd="110dp"
-        android:hint="@string/ipInput"
-        android:inputType="number"
-        android:maxLength="40"
-        android:singleLine="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
     <Button
-        android:id="@+id/startButton"
+        android:id="@+id/offline"
         android:layout_width="75dp"
         android:layout_height="37dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="164dp"
-        android:text="@string/startButton"
+        android:layout_marginBottom="48dp"
+        android:layout_marginStart="140dp"
+        android:text="@string/offline"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/serverButton"
+        android:id="@+id/online"
         android:layout_width="75dp"
         android:layout_height="37dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="364dp"
-        android:text="@string/serverButton"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/showYourIpAddress"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="136dp"
-        android:layout_marginEnd="110dp"
+        android:layout_marginBottom="48dp"
+        android:layout_marginEnd="140dp"
+        android:text="@string/online"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
-        android:id="@+id/yourIp"
-        android:layout_width="60dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="136dp"
-        android:layout_marginStart="96dp"
-        android:gravity="center"
-        android:text="@string/yourIp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="60dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="64dp"
-        android:layout_marginStart="96dp"
-        android:gravity="center"
-        android:text="@string/inputText"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
