--- a/app/src/main/res/layout/activity_network.xml
+++ b/app/src/main/res/layout/activity_network.xml
@@ -13,7 +13,7 @@
         android:layout_marginBottom="64dp"
         android:layout_marginEnd="110dp"
         android:hint="@string/ipInput"
-        android:inputType="number"
+        android:inputType="none"
         android:maxLength="40"
         android:singleLine="true"
         app:layout_constraintBottom_toBottomOf="parent"
